Beat/BeatParser.py
# Generated from ../Beat/Beat.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BeatParser ( Parser ):

    grammarFileName = "Beat.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'write'", "'('", "')'", "'read'", 
                     "'array'", "','", "'set'", "'get'", "'if'", "'{'", 
                     "'}'", "'else'", "'<'", "'>'", "'<>'", "'=='", "'<='", 
                     "'>='", "'void'", "'while'", "'for'", "';'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'^'", "'*'", "'/'", "'-'", 
                     "'+'", "'%'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "NUM", "ID", "ANYTEXT", "ELEV", "PER", "ENTRE", "MENYS", 
                      "MES", "MOD", "LINE_COMMENT", "WS", "ANY" ]

    RULE_root = 0
    RULE_stat = 1
    RULE_expr = 2
    RULE_condicional = 3
    RULE_statblock = 4
    RULE_relational = 5
    RULE_functioncall = 6
    RULE_functiondef = 7
    RULE_argumentsdef = 8
    RULE_wargs = 9
    RULE_arguments = 10
    RULE_loop = 11
    RULE_anytext = 12

    ruleNames =  [ "root", "stat", "expr", "condicional", "statblock", "relational", 
                   "functioncall", "functiondef", "argumentsdef", "wargs", 
                   "arguments", "loop", "anytext" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    NUM=24
    ID=25
    ANYTEXT=26
    ELEV=27
    PER=28
    ENTRE=29
    MENYS=30
    MES=31
    MOD=32
    LINE_COMMENT=33
    WS=34
    ANY=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BeatParser.RULE_root

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class TreerootContext(RootContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeatParser.RootContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functiondef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BeatParser.FunctiondefContext)
            else:
                return self.getTypedRuleContext(BeatParser.FunctiondefContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTreeroot" ):
                return visitor.visitTreeroot(self)
            else:
                return visitor.visitChildren(self)



    def root(self):

        localctx = BeatParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            localctx = BeatParser.TreerootContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 27 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 26
                self.functiondef()
                self.state = 29 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BeatParser.T__19):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BeatParser.RULE_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FdefContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeatParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functiondef(self):
            return self.getTypedRuleContext(BeatParser.FunctiondefContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFdef" ):
                return visitor.visitFdef(self)
            else:
                return visitor.visitChildren(self)


    class BucleContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeatParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def loop(self):
            return self.getTypedRuleContext(BeatParser.LoopContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBucle" ):
                return visitor.visitBucle(self)
            else:
                return visitor.visitChildren(self)


    class ReadContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeatParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(BeatParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRead" ):
                return visitor.visitRead(self)
            else:
                return visitor.visitChildren(self)


    class SetarrayvalueContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeatParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(BeatParser.ID, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BeatParser.ExprContext)
            else:
                return self.getTypedRuleContext(BeatParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSetarrayvalue" ):
                return visitor.visitSetarrayvalue(self)
            else:
                return visitor.visitChildren(self)


    class NewarrayContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeatParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(BeatParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(BeatParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNewarray" ):
                return visitor.visitNewarray(self)
            else:
                return visitor.visitChildren(self)


    class RelatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeatParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def relational(self):
            return self.getTypedRuleContext(BeatParser.RelationalContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelat" ):
                return visitor.visitRelat(self)
            else:
                return visitor.visitChildren(self)


    class StatexprContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeatParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(BeatParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatexpr" ):
                return visitor.visitStatexpr(self)
            else:
                return visitor.visitChildren(self)


    class CondContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeatParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def condicional(self):
            return self.getTypedRuleContext(BeatParser.CondicionalContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCond" ):
                return visitor.visitCond(self)
            else:
                return visitor.visitChildren(self)


    class WriteContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeatParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def wargs(self):
            return self.getTypedRuleContext(BeatParser.WargsContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWrite" ):
                return visitor.visitWrite(self)
            else:
                return visitor.visitChildren(self)


    class AssignContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeatParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(BeatParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(BeatParser.ExprContext,0)

        def relational(self):
            return self.getTypedRuleContext(BeatParser.RelationalContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)



    def stat(self):

        localctx = BeatParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = BeatParser.StatexprContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 31
                self.expr(0)
                pass

            elif la_ == 2:
                localctx = BeatParser.AssignContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 32
                self.match(BeatParser.ID)
                self.state = 33
                self.match(BeatParser.T__0)
                self.state = 36
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 34
                    self.expr(0)
                    pass

                elif la_ == 2:
                    self.state = 35
                    self.relational()
                    pass


                pass

            elif la_ == 3:
                localctx = BeatParser.WriteContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 38
                self.match(BeatParser.T__1)
                self.state = 39
                self.match(BeatParser.T__2)
                self.state = 40
                self.wargs()
                self.state = 41
                self.match(BeatParser.T__3)
                pass

            elif la_ == 4:
                localctx = BeatParser.ReadContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 43
                self.match(BeatParser.T__4)
                self.state = 44
                self.match(BeatParser.T__2)
                self.state = 45
                self.match(BeatParser.ID)
                self.state = 46
                self.match(BeatParser.T__3)
                pass

            elif la_ == 5:
                localctx = BeatParser.NewarrayContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 47
                self.match(BeatParser.T__5)
                self.state = 48
                self.match(BeatParser.T__2)
                self.state = 49
                self.match(BeatParser.ID)
                self.state = 50
                self.match(BeatParser.T__6)
                self.state = 51
                self.expr(0)
                self.state = 52
                self.match(BeatParser.T__3)
                pass

            elif la_ == 6:
                localctx = BeatParser.SetarrayvalueContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 54
                self.match(BeatParser.T__7)
                self.state = 55
                self.match(BeatParser.T__2)
                self.state = 56
                self.match(BeatParser.ID)
                self.state = 57
                self.match(BeatParser.T__6)
                self.state = 58
                self.expr(0)
                self.state = 59
                self.match(BeatParser.T__6)
                self.state = 60
                self.expr(0)
                self.state = 61
                self.match(BeatParser.T__3)
                pass

            elif la_ == 7:
                localctx = BeatParser.RelatContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 63
                self.relational()
                pass

            elif la_ == 8:
                localctx = BeatParser.BucleContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 64
                self.loop()
                pass

            elif la_ == 9:
                localctx = BeatParser.CondContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 65
                self.condicional()
                pass

            elif la_ == 10:
                localctx = BeatParser.FdefContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 66
                self.functiondef()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BeatParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ProducteContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeatParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BeatParser.ExprContext)
            else:
                return self.getTypedRuleContext(BeatParser.ExprContext,i)

        def PER(self):
            return self.getToken(BeatParser.PER, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProducte" ):
                return visitor.visitProducte(self)
            else:
                return visitor.visitChildren(self)


    class SumaContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeatParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BeatParser.ExprContext)
            else:
                return self.getTypedRuleContext(BeatParser.ExprContext,i)

        def MES(self):
            return self.getToken(BeatParser.MES, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSuma" ):
                return visitor.visitSuma(self)
            else:
                return visitor.visitChildren(self)


    class ModContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeatParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BeatParser.ExprContext)
            else:
                return self.getTypedRuleContext(BeatParser.ExprContext,i)

        def MOD(self):
            return self.getToken(BeatParser.MOD, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMod" ):
                return visitor.visitMod(self)
            else:
                return visitor.visitChildren(self)


    class DivisioContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeatParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BeatParser.ExprContext)
            else:
                return self.getTypedRuleContext(BeatParser.ExprContext,i)

        def ENTRE(self):
            return self.getToken(BeatParser.ENTRE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDivisio" ):
                return visitor.visitDivisio(self)
            else:
                return visitor.visitChildren(self)


    class FuncioContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeatParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functioncall(self):
            return self.getTypedRuleContext(BeatParser.FunctioncallContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncio" ):
                return visitor.visitFuncio(self)
            else:
                return visitor.visitChildren(self)


    class GetarrayvalueContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeatParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(BeatParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(BeatParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGetarrayvalue" ):
                return visitor.visitGetarrayvalue(self)
            else:
                return visitor.visitChildren(self)


    class IdContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeatParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(BeatParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId" ):
                return visitor.visitId(self)
            else:
                return visitor.visitChildren(self)


    class PotenciaContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeatParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BeatParser.ExprContext)
            else:
                return self.getTypedRuleContext(BeatParser.ExprContext,i)

        def ELEV(self):
            return self.getToken(BeatParser.ELEV, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPotencia" ):
                return visitor.visitPotencia(self)
            else:
                return visitor.visitChildren(self)


    class ValorContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeatParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUM(self):
            return self.getToken(BeatParser.NUM, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValor" ):
                return visitor.visitValor(self)
            else:
                return visitor.visitChildren(self)


    class RestaContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeatParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BeatParser.ExprContext)
            else:
                return self.getTypedRuleContext(BeatParser.ExprContext,i)

        def MENYS(self):
            return self.getToken(BeatParser.MENYS, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitResta" ):
                return visitor.visitResta(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = BeatParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = BeatParser.ValorContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 70
                self.match(BeatParser.NUM)
                pass

            elif la_ == 2:
                localctx = BeatParser.GetarrayvalueContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 71
                self.match(BeatParser.T__8)
                self.state = 72
                self.match(BeatParser.T__2)
                self.state = 73
                self.match(BeatParser.ID)
                self.state = 74
                self.match(BeatParser.T__6)
                self.state = 75
                self.expr(0)
                self.state = 76
                self.match(BeatParser.T__3)
                pass

            elif la_ == 3:
                localctx = BeatParser.FuncioContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 78
                self.functioncall()
                pass

            elif la_ == 4:
                localctx = BeatParser.IdContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 79
                self.match(BeatParser.ID)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 102
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 100
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        localctx = BeatParser.PotenciaContext(self, BeatParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 82
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 83
                        self.match(BeatParser.ELEV)
                        self.state = 84
                        self.expr(10)
                        pass

                    elif la_ == 2:
                        localctx = BeatParser.ProducteContext(self, BeatParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 85
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 86
                        self.match(BeatParser.PER)
                        self.state = 87
                        self.expr(10)
                        pass

                    elif la_ == 3:
                        localctx = BeatParser.DivisioContext(self, BeatParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 88
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 89
                        self.match(BeatParser.ENTRE)
                        self.state = 90
                        self.expr(9)
                        pass

                    elif la_ == 4:
                        localctx = BeatParser.RestaContext(self, BeatParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 91
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 92
                        self.match(BeatParser.MENYS)
                        self.state = 93
                        self.expr(8)
                        pass

                    elif la_ == 5:
                        localctx = BeatParser.SumaContext(self, BeatParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 94
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 95
                        self.match(BeatParser.MES)
                        self.state = 96
                        self.expr(7)
                        pass

                    elif la_ == 6:
                        localctx = BeatParser.ModContext(self, BeatParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 97
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 98
                        self.match(BeatParser.MOD)
                        self.state = 99
                        self.expr(6)
                        pass

             
                self.state = 104
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class CondicionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BeatParser.RULE_condicional

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IfContext(CondicionalContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeatParser.CondicionalContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def relational(self):
            return self.getTypedRuleContext(BeatParser.RelationalContext,0)

        def statblock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BeatParser.StatblockContext)
            else:
                return self.getTypedRuleContext(BeatParser.StatblockContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf" ):
                return visitor.visitIf(self)
            else:
                return visitor.visitChildren(self)



    def condicional(self):

        localctx = BeatParser.CondicionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_condicional)
        self._la = 0 # Token type
        try:
            localctx = BeatParser.IfContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(BeatParser.T__9)
            self.state = 106
            self.match(BeatParser.T__2)
            self.state = 107
            self.relational()
            self.state = 108
            self.match(BeatParser.T__3)
            self.state = 109
            self.match(BeatParser.T__10)
            self.state = 110
            self.statblock()
            self.state = 111
            self.match(BeatParser.T__11)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BeatParser.T__12:
                self.state = 112
                self.match(BeatParser.T__12)
                self.state = 113
                self.match(BeatParser.T__10)
                self.state = 114
                self.statblock()
                self.state = 115
                self.match(BeatParser.T__11)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatblockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BeatParser.RULE_statblock

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StblockContext(StatblockContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeatParser.StatblockContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BeatParser.StatContext)
            else:
                return self.getTypedRuleContext(BeatParser.StatContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStblock" ):
                return visitor.visitStblock(self)
            else:
                return visitor.visitChildren(self)



    def statblock(self):

        localctx = BeatParser.StatblockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statblock)
        self._la = 0 # Token type
        try:
            localctx = BeatParser.StblockContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BeatParser.T__1) | (1 << BeatParser.T__4) | (1 << BeatParser.T__5) | (1 << BeatParser.T__7) | (1 << BeatParser.T__8) | (1 << BeatParser.T__9) | (1 << BeatParser.T__19) | (1 << BeatParser.T__20) | (1 << BeatParser.T__21) | (1 << BeatParser.NUM) | (1 << BeatParser.ID))) != 0):
                self.state = 119
                self.stat()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BeatParser.RULE_relational

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class LowerThanContext(RelationalContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeatParser.RelationalContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BeatParser.ExprContext)
            else:
                return self.getTypedRuleContext(BeatParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLowerThan" ):
                return visitor.visitLowerThan(self)
            else:
                return visitor.visitChildren(self)


    class EqualContext(RelationalContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeatParser.RelationalContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BeatParser.ExprContext)
            else:
                return self.getTypedRuleContext(BeatParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqual" ):
                return visitor.visitEqual(self)
            else:
                return visitor.visitChildren(self)


    class BiggerThanContext(RelationalContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeatParser.RelationalContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BeatParser.ExprContext)
            else:
                return self.getTypedRuleContext(BeatParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBiggerThan" ):
                return visitor.visitBiggerThan(self)
            else:
                return visitor.visitChildren(self)


    class BiggerEqContext(RelationalContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BeatParser.RelationalContext
            super().__init__(parser)
            self.copyFrom(ctx)
